--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/jasminewd2": "2.0.6",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.10",
+    "@types/uuid": "^3.4.5",
     "@types/webdriverio": "4.13.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
